# VoiceChange_NDK02

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ljh/voicechange_ndk02/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/ljh/voicechange_ndk02/: MainActivity.java
app/src/main/java/com/ljh/voicechange_ndk02/utils/: EffectUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ljh/voicechange_ndk02/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
